[package]
name = "tokio-socketcan"
version = "0.3.0"
authors = ["Terry Kerr <root@oefd.ca>"]
edition = "2018"
description = "Asynchronous Linux SocketCAN sockets with tokio"
license = "MIT"
repository = "https://github.com/oefd/tokio-socketcan"

[dependencies]
socketcan = "1.7"
futures = "0.3.27"
mio = "0.8.6"
libc = "0.2.140"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["net", "macros"] }
stubborn-io = "0.3.2"

[dev-dependencies]
futures-timer = "3.0.2"
futures-util = "0.3.27"

[features]
stubborn_io = []
driver_time = []
